--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ version = "0.1.0"
 [dependencies]
 na = "0.18.1"
 num = "0.2.0"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "bench_roots"
+harness = false
